# TikShot

./: .env.example  .gitignore  Anchor.toml  README.md
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/public/: tikshot.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: BetPanel.tsx  GameBoard.tsx  History.tsx  PoolBar.tsx  PriceChart.tsx  Providers.tsx  RoundTimer.tsx
app/src/lib/: constants.ts  hooks.ts  program.ts
crank/: package-lock.json  package.json  tsconfig.json
crank/scripts/: patch-rpc-websockets.js
crank/src/: index.ts
programs/tikshot/: Cargo.toml
programs/tikshot/src/: lib.rs
